syntax = "proto3";

package user;

message UserId {
  string id = 1; 
  string token = 2;
}

message UserResponse {
  string name = 1;
  string email = 2;
  string phone = 3;
  string roleId = 4;
  string address = 5;
  string birthDay = 6;
  string sex = 7;
  string agentId = 8;
  string operatorId = 9;
}

service UserService {
  rpc FindUserById (UserId) returns (UserResponse);
}
