// Original file: src/protos/user.proto


export interface UserResponse {
  'name'?: (string);
  'email'?: (string);
  'phone'?: (string);
  'roleId'?: (string);
  'address'?: (string);
  'birthDay'?: (string);
  'sex'?: (string);
  'agentId'?: (string);
  'operatorId'?: (string);
}

export interface UserResponse__Output {
  'name': (string);
  'email': (string);
  'phone': (string);
  'roleId': (string);
  'address': (string);
  'birthDay': (string);
  'sex': (string);
  'agentId': (string);
  'operatorId': (string);
}
